--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,8 +7,8 @@
 	<form method="post" action="">
 		{{ form.csrf }}
 		{{ form.hidden_tag() }}
-		<p>{{ form.url(size=60) }}</p>
-		{{form.submit()}}	
+		<p>{{ form.url(size=40) }} {{form.submit()}}</p>
+			
 	</form>
 	
 </body>
