install validators package, validation error and changing some stuff in models, routes and index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
 		{{ form.csrf }}
 		{{ form.hidden_tag() }}
 		<p>{{ form.url(size=40) }} {{form.submit()}}</p>
+		<p style="color: red;">{{error}}</p>
 			
 	</form>
 	
